Added Notification manager
Added Notification Manager plus sound to be used and a new intent for Boom!

--- a/app/src/main/res/layout/activity_boom.xml
+++ b/app/src/main/res/layout/activity_boom.xml
@@ -4,20 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.will.timernotificationapp.MainActivity">
+    tools:context="com.example.will.timernotificationapp.BoomActivity">
 
-    <Button
-        android:id="@+id/buttonStartCounter"
+    <TextView
+        android:id="@+id/boomView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        android:background="@android:color/holo_blue_dark"
-        android:backgroundTint="@android:color/holo_blue_bright"
-        android:onClick="startCounter"
-        android:text="Start Counter"
+        android:fontFamily="serif"
+        android:text="@string/boom_view"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="36sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
